cni/netpol/egress-denyall.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: denyall-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
