cni/netpol/ingress-allowall.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allowall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
