cni/netpol/ingress-denyall.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: denyall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
